--- a/fmd.html
+++ b/fmd.html
@@ -1,5 +1,5 @@
 <h1>01. Как устроена IT инфраструктура</h1>
-<p>&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/nJtxlL_sgnE&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nJtxlL_sgnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2>IT инфраструктура</h2>
 <p><img src="images/city.png" alt=""></p>
 <p>Начнём с вопроса - кто такой системный администратор?</p>
